Remove design folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 #####################################################
 *.sketch
 *.fig
-
+./design/
+./fonts/
+.README.md
 # Avoid accidental XD upload if you convert the design file
 ###############################################
 ## Please do not remove line 12 - thanks! 🙂 ##
